--- a/MovieBooking 2/src/main/resources/templates/BookedTicketManagement.html
+++ b/MovieBooking 2/src/main/resources/templates/BookedTicketManagement.html
@@ -118,7 +118,7 @@
               <input type="text" name="searchInput" id="searchInput" class="form-control w-75" placeholder="Search" th:value="${search}">
               <input type="hidden" name="size" th:value="${size}">
               <input type="hidden" name="page" th:value="0">
-            </form>cou
+            </form>
           </div>
         </div>
         <table class="table table-striped">
