--- a/MovieBooking 2/src/main/resources/templates/login.html
+++ b/MovieBooking 2/src/main/resources/templates/login.html
@@ -29,7 +29,8 @@
       src="https://code.jquery.com/jquery-3.7.1.js"
       integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
       crossorigin="anonymous"
-    ></script>
+    >
+    </script>
   </head>
   <body>
     <div class="container-fluid">
@@ -67,6 +68,7 @@
                   class="form-control"
                   placeholder="Username"
                   aria-describedby="helpId"
+                  style="height: 45px"
                 />
                 <small id="username-err" class="text-danger"></small>
               </div>
@@ -78,12 +80,13 @@
                   class="form-control"
                   placeholder="Password"
                   aria-describedby="helpId"
+                  style="height: 45px"
                 />
                 <small id="password-err" class="text-danger"></small>
               </div>
               <button
                 class="btn text-white w-100"
-                style="background-color: #347ab7"
+                style="background-color: #347ab7;height: 45px; font-size: 17px"
               >
                 <i class="fa-solid fa-right-to-bracket"></i>
                 Login
@@ -92,7 +95,7 @@
 
             <div class="mt-3 d-flex justify-content-center">
               <span>Don't have an account yet?</span>
-              <a th:href="@{/register}" class="text-dark ms-2">Register now!</a>
+              <a th:href="@{/register}" class="text-dark ms-2" style="text-decoration: none; border-bottom: 1px solid">Register now!</a>
             </div>
           </div>
         </div>
