--- a/MovieBooking 2/src/main/resources/templates/employee/list.html
+++ b/MovieBooking 2/src/main/resources/templates/employee/list.html
@@ -185,15 +185,15 @@
                     <ul class="pagination justify-content-end">
                         <li class="page-item" th:classappend="${currentPage <= 1} ? 'disabled'">
                             <a class="page-link"
-                               th:href="@{(${currentPage > 1}) ? '?pageNo=' + ${currentPage - 1} : ''}">Previous</a>
+                               th:href="@{(${currentPage > 1}) ? '?search='+${search}+'&'+'pageNo=' + ${currentPage - 1} : ''}">Previous</a>
                         </li>
                         <li th:each="i:${#numbers.sequence(1,totalPages)}"
                             th:classappend="${currentPage == i ? 'page-item active' : ''}">
-                            <a class="page-link" th:href="@{'?pageNo='+${i}}" th:text="${i}"></a>
+                            <a class="page-link" th:href="@{'?search='+${search}+'&'+'pageNo='+${i}}" th:text="${i}"></a>
                         </li>
                         <li class="page-item" th:classappend="${currentPage >= totalPages} ? 'disabled'">
                             <a class="page-link"
-                               th:href="@{(${currentPage < totalPages}) ? '?pageNo=' + ${currentPage + 1} : ''}">Next</a>
+                               th:href="@{(${currentPage < totalPages}) ? '?search='+${search}+'&'+'pageNo=' + ${currentPage + 1} : ''}">Next</a>
                         </li>
                     </ul>
                 </nav>
