--- a/MovieBooking 2/src/main/resources/templates/editPromotion.html
+++ b/MovieBooking 2/src/main/resources/templates/editPromotion.html
@@ -83,7 +83,8 @@
                             class="card-img-center"
                             alt="..."
                             style="
-                                width: 60%;
+                                width: 640px;
+                                height: 280px;
                                 object-fit: cover;
                                 overflow: hidden;
                                 "
