--- a/MovieBooking 2/src/main/resources/templates/listPromotion.html
+++ b/MovieBooking 2/src/main/resources/templates/listPromotion.html
@@ -142,21 +142,17 @@
 									<div class="modal fade" id="deleteModal" tabindex="-1">
 										<div class="modal-dialog">
 											<div class="modal-content">
-												<div class="modal-header">
-													<h5 class="modal-title">Confirm Delete</h5>
-													<button type="button" class="btn-close"
-														data-bs-dismiss="modal"></button>
-												</div>
+
 												<div class="modal-body">
-													<p>Are you sure you want to delete this record?</p>
+													<p style="margin-top: 10px; margin-bottom: 0; margin-left: 10px">Are you sure you want to delete this record?</p>
 												</div>
-												<div class="modal-footer">
-													<form id="deleteForm" method="post" th:action="@{/deletePromotion/{id}(id=${promotionId})}">
+												<div class="modal-footer" style="border-top: none; ">
+													<form class="col-2" id="deleteForm" method="post" th:action="@{/deletePromotion/{id}(id=${promotionId})}">
 														<input type="hidden" name="_method" value="delete">
-														<button type="submit" class="btn btn-primary" id="confirmDelete">OK</button>
+														<button type="submit" class="btn btn-primary" id="confirmDelete" style="width: 100%">OK</button>
 													</form>
-													<button type="button" class="btn btn-secondary"
-														data-bs-dismiss="modal">Cancel</button>
+													<div type="button" class="btn btn-outline-secondary me-2 col-2"
+														data-bs-dismiss="modal">Huỷ</div>
 												</div>
 											</div>
 										</div>
