--- a/MovieBooking 2/src/main/resources/templates/edit-member.html
+++ b/MovieBooking 2/src/main/resources/templates/edit-member.html
@@ -163,7 +163,7 @@
                           value="Nam"
                   />
                   <label for="male">Nam</label>
-                  <input type="radio" id="female" name="gender" value="Nu" th:checked="${account.gender.equals('Nu')}" th:field="*{gender}"/>
+                  <input class="ms-2" type="radio" id="female" name="gender" value="Nu" th:checked="${account.gender.equals('Nu')}" th:field="*{gender}"/>
                   <label for="female">Nữ</label>
                   </div>
                 </div>
