--- a/MovieBooking 2/src/main/resources/templates/component/AdminHeader.html
+++ b/MovieBooking 2/src/main/resources/templates/component/AdminHeader.html
@@ -12,7 +12,7 @@
 
                 <div sec:authorize="isAuthenticated()">
                     <div class="d-flex gap-4">
-                        <a th:href="@{/edit}" class="text-white text-decoration-none">
+                        <a href="#" class="text-white text-decoration-none">
                             <i class="fa-solid fa-user"></i>
                             <span>Welcome, <span sec:authentication="name"></span></span>
                         </a>
