java doc for 3.1.5

--- a/MovieBooking 2/src/main/resources/templates/TKS-showtimes.html
+++ b/MovieBooking 2/src/main/resources/templates/TKS-showtimes.html
@@ -154,7 +154,7 @@
               >
                 <div class="col-2 d-flex justify-content-center p-0">
                   <img
-                    th:src="@{${movie.largeImage}}"
+                    th:src="@{${movie.smallImage}}"
                     class="poster"
                     alt="Movie Poszzter"
                   />
