--- a/MovieBooking 2/src/main/resources/templates/TKS-ticketinfomation.html
+++ b/MovieBooking 2/src/main/resources/templates/TKS-ticketinfomation.html
@@ -133,7 +133,7 @@
               <div class="row">
                 <div class="col-2">
                   <img
-                    th:src="@{${booking.movie.largeImage}}"
+                    th:src="@{${booking.movie.smallImage}}"
                     class="img-fluid"
                     alt="Movie Poszzter"
                   />
