--- a/MovieBooking 2/src/main/resources/templates/TKS-confirmbookingticket.html
+++ b/MovieBooking 2/src/main/resources/templates/TKS-confirmbookingticket.html
@@ -150,7 +150,7 @@
                 <div class="row">
                   <div class="col-2">
                     <img
-                      th:src="@{${movie.largeImage}}"
+                      th:src="@{${movie.smallImage}}"
                       class="img-fluid"
                       alt="Movie Poszzter"
                     />
