--- a/MovieBooking 2/src/main/resources/templates/HistoryScore.html
+++ b/MovieBooking 2/src/main/resources/templates/HistoryScore.html
@@ -37,9 +37,8 @@
             border: 1px solid lightgray;
         }
         .form-check-input:checked[type=radio] {
-            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3E%3Ccircle r='2' fill='%23000'/%3E%3C/svg%3E");
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3E%3Ccircle r='2' fill='%23666666'/%3E%3C/svg%3E");
         }
-
 
         .list-group-item .history-score {
             text-decoration: none;
